feat(3.3.1): adapt official version for 3.3.1