@@ -1,140 +1,115 @@
 package com.xxl.job.admin.scheduler.thread;
 
+import com.xxl.job.admin.constant.TriggerStatus;
 import com.xxl.job.admin.model.XxlJobInfo;
-import com.xxl.job.admin.platform.DatabasePlatformUtil;
-import com.xxl.job.admin.scheduler.conf.XxlJobAdminConfig;
-import com.xxl.job.admin.scheduler.cron.CronExpression;
-import com.xxl.job.admin.scheduler.scheduler.MisfireStrategyEnum;
-import com.xxl.job.admin.scheduler.scheduler.ScheduleTypeEnum;
+import com.xxl.job.admin.scheduler.config.XxlJobAdminBootstrap;
+import com.xxl.job.admin.scheduler.misfire.MisfireStrategyEnum;
+import com.xxl.job.admin.scheduler.type.ScheduleTypeEnum;
 import com.xxl.job.admin.scheduler.trigger.TriggerTypeEnum;
+import com.xxl.tool.core.CollectionTool;
+import com.xxl.tool.core.MapTool;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.transaction.TransactionStatus;
+import org.springframework.transaction.support.DefaultTransactionDefinition;
 
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
-import java.util.concurrent.*;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.locks.Lock;
-import java.util.concurrent.locks.ReentrantLock;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.TimeUnit;
 
 /**
  * @author xuxueli 2019-05-21
  */
 public class JobScheduleHelper {
-    private static Logger logger = LoggerFactory.getLogger(JobScheduleHelper.class);
+    private static final Logger logger = LoggerFactory.getLogger(JobScheduleHelper.class);
 
-    private static JobScheduleHelper instance = new JobScheduleHelper();
-
-    public static JobScheduleHelper getInstance() {
-        return instance;
-    }
 
     public static final long PRE_READ_MS = 5000;    // pre read
 
     private Thread scheduleThread;
     private Thread ringThread;
-    private final AtomicBoolean scheduleThreadToStop = new AtomicBoolean(false);
-    private final AtomicBoolean ringThreadToStop = new AtomicBoolean(false);
-    private volatile static ConcurrentMap<Integer, BlockingQueue<Integer>> ringData = new ConcurrentHashMap<>();
+    private volatile boolean scheduleThreadToStop = false;
+    private volatile boolean ringThreadToStop = false;
+    private final Map<Integer, List<Integer>> ringData = new ConcurrentHashMap<>();
 
-    public void start() {
+    /**
+     * start
+     */
+    public void start(){
 
         // schedule thread
         scheduleThread = new Thread(new Runnable() {
             @Override
             public void run() {
 
+                // align time
                 try {
-                    TimeUnit.MILLISECONDS.sleep(5000 - System.currentTimeMillis() % 1000);
+                    TimeUnit.MILLISECONDS.sleep(5000 - System.currentTimeMillis()%1000 );
                 } catch (Throwable e) {
-                    if (!scheduleThreadToStop.get()) {
+                    if (!scheduleThreadToStop) {
                         logger.error(e.getMessage(), e);
                     }
                 }
                 logger.info(">>>>>>>>> init xxl-job admin scheduler success.");
 
-                // pre-read count: treadpool-size * trigger-qps (each trigger cost 50ms, qps = 1000/50 = 20)
-                int preReadCount = (XxlJobAdminConfig.getAdminConfig().getTriggerPoolFastMax() + XxlJobAdminConfig.getAdminConfig().getTriggerPoolSlowMax()) * 20;
+                // pre-read count: treadpool-size * trigger-qps (each trigger cost 100ms, qps = 1000/100 = 100)
+                int preReadCount = (XxlJobAdminBootstrap.getInstance().getTriggerPoolFastMax() + XxlJobAdminBootstrap.getInstance().getTriggerPoolSlowMax()) * 10;
 
-                Lock lock = new ReentrantLock();
+                // do schedule
+                while (!scheduleThreadToStop) {
 
-                while (!scheduleThreadToStop.get()) {
-
-                    boolean isStandalone = DatabasePlatformUtil.isStandalone();
-
-                    // Scan Job
+                    // param
                     long start = System.currentTimeMillis();
-
-                    Connection conn = null;
-                    Boolean connAutoCommit = null;
-                    PreparedStatement preparedStatement = null;
-
-                    if (isStandalone) {
-                        lock.lock();
-                    }
                     boolean preReadSuc = true;
+
+                    // transaction start
+                    TransactionStatus transactionStatus = null;
                     try {
-
-                        conn = XxlJobAdminConfig.getAdminConfig().getDataSource().getConnection();
-                        connAutoCommit = conn.getAutoCommit();
-                        conn.setAutoCommit(false);
-
-                        if (!isStandalone) {
-                            preparedStatement = DatabasePlatformUtil.getLockStatement(conn);
-                            preparedStatement.execute();
-                        }
-
-                        // tx start
-
-                        // 1、pre read
+                        transactionStatus = XxlJobAdminBootstrap.getInstance().getTransactionManager().getTransaction(new DefaultTransactionDefinition());
+                        // 1、job lock
+                        String lockedRecord = XxlJobAdminBootstrap.getInstance().getXxlJobLockMapper().scheduleLock();
                         long nowTime = System.currentTimeMillis();
-                        List<XxlJobInfo> scheduleList = XxlJobAdminConfig.getAdminConfig().getXxlJobInfoMapper().scheduleJobQuery(nowTime + PRE_READ_MS, preReadCount);
-                        if (scheduleList != null && !scheduleList.isEmpty()) {
+
+                        // scan and process job
+                        List<XxlJobInfo> scheduleList = XxlJobAdminBootstrap.getInstance().getXxlJobInfoMapper().scheduleJobQuery(nowTime + PRE_READ_MS, preReadCount);
+                        if (CollectionTool.isNotEmpty(scheduleList)) {
+
                             // 2、push time-ring
-                            for (XxlJobInfo jobInfo : scheduleList) {
+                            for (XxlJobInfo jobInfo: scheduleList) {
 
                                 // time-ring jump
                                 if (nowTime > jobInfo.getTriggerNextTime() + PRE_READ_MS) {
                                     // 2.1、trigger-expire > 5s：pass && make next-trigger-time
-                                    logger.warn(">>>>>>>>>>> xxl-job, schedule misfire, jobId = " + jobInfo.getId());
 
-                                    // 1、misfire match
+                                    // 1、misfire handle
                                     MisfireStrategyEnum misfireStrategyEnum = MisfireStrategyEnum.match(jobInfo.getMisfireStrategy(), MisfireStrategyEnum.DO_NOTHING);
-                                    if (MisfireStrategyEnum.FIRE_ONCE_NOW == misfireStrategyEnum) {
-                                        // FIRE_ONCE_NOW 》 trigger
-                                        JobTriggerPoolHelper.trigger(jobInfo.getId(), TriggerTypeEnum.MISFIRE, -1, null, null, null);
-                                        logger.debug(">>>>>>>>>>> xxl-job, schedule push trigger : jobId = " + jobInfo.getId());
-                                    }
+                                    misfireStrategyEnum.getMisfireHandler().handle(jobInfo.getId());
 
                                     // 2、fresh next
-                                    refreshNextValidTime(jobInfo, new Date());
+                                    refreshNextTriggerTime(jobInfo, new Date());
 
                                 } else if (nowTime > jobInfo.getTriggerNextTime()) {
                                     // 2.2、trigger-expire < 5s：direct-trigger && make next-trigger-time
 
-                                    // 1、trigger
-                                    JobTriggerPoolHelper.trigger(jobInfo.getId(), TriggerTypeEnum.CRON, -1, null, null, null);
-                                    logger.debug(">>>>>>>>>>> xxl-job, schedule push trigger : jobId = " + jobInfo.getId());
+                                    // 1、trigger direct
+                                    XxlJobAdminBootstrap.getInstance().getJobTriggerPoolHelper().trigger(jobInfo.getId(), TriggerTypeEnum.CRON, -1, null, null, null);
+                                    logger.debug(">>>>>>>>>>> xxl-job, schedule expire, direct trigger : jobId = " + jobInfo.getId() );
 
                                     // 2、fresh next
-                                    refreshNextValidTime(jobInfo, new Date());
+                                    refreshNextTriggerTime(jobInfo, new Date());
 
                                     // next-trigger-time in 5s, pre-read again
-                                    if (jobInfo.getTriggerStatus() == 1 && nowTime + PRE_READ_MS > jobInfo.getTriggerNextTime()) {
+                                    if (jobInfo.getTriggerStatus()== TriggerStatus.RUNNING.getValue() && nowTime + PRE_READ_MS > jobInfo.getTriggerNextTime()) {
 
                                         // 1、make ring second
-                                        int ringSecond = (int) ((jobInfo.getTriggerNextTime() / 1000) % 60);
+                                        int ringSecond = (int)((jobInfo.getTriggerNextTime()/1000)%60);
 
-                                        // 2、push time ring
+                                        // 2、push time ring (pre read)
                                         pushTimeRing(ringSecond, jobInfo.getId());
+                                        logger.debug(">>>>>>>>>>> xxl-job, schedule pre-read, push trigger : jobId = " + jobInfo.getId() );
 
                                         // 3、fresh next
-                                        refreshNextValidTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
+                                        refreshNextTriggerTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
 
                                     }
 
@@ -142,84 +117,47 @@ public class JobScheduleHelper {
                                     // 2.3、trigger-pre-read：time-ring trigger && make next-trigger-time
 
                                     // 1、make ring second
-                                    int ringSecond = (int) ((jobInfo.getTriggerNextTime() / 1000) % 60);
+                                    int ringSecond = (int)((jobInfo.getTriggerNextTime()/1000)%60);
 
                                     // 2、push time ring
                                     pushTimeRing(ringSecond, jobInfo.getId());
+                                    logger.debug(">>>>>>>>>>> xxl-job, schedule normal, push trigger : jobId = " + jobInfo.getId() );
 
                                     // 3、fresh next
-                                    refreshNextValidTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
+                                    refreshNextTriggerTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
 
                                 }
 
                             }
 
                             // 3、update trigger info
-                            for (XxlJobInfo jobInfo : scheduleList) {
-                                XxlJobAdminConfig.getAdminConfig().getXxlJobInfoMapper().scheduleUpdate(jobInfo);
+                            for (XxlJobInfo jobInfo: scheduleList) {
+                                XxlJobAdminBootstrap.getInstance().getXxlJobInfoMapper().scheduleUpdate(jobInfo);
                             }
 
                         } else {
                             preReadSuc = false;
                         }
 
-                        // tx stop
-
-
                     } catch (Throwable e) {
-                        if (!scheduleThreadToStop.get()) {
-                            logger.error(">>>>>>>>>>> xxl-job, JobScheduleHelper#scheduleThread error:{}", e);
+                        if (!scheduleThreadToStop) {
+                            logger.error(">>>>>>>>>>> xxl-job, JobScheduleHelper#scheduleThread error:{}", e.getMessage(), e);
                         }
                     } finally {
-                        if (isStandalone) {
-                            lock.unlock();
-                        }
-                        // commit
-                        if (conn != null) {
-                            try {
-                                conn.commit();
-                            } catch (Throwable e) {
-                                if (!scheduleThreadToStop.get()) {
-                                    logger.error(e.getMessage(), e);
-                                }
-                            }
-                            try {
-                                conn.setAutoCommit(connAutoCommit);
-                            } catch (Throwable e) {
-                                if (!scheduleThreadToStop.get()) {
-                                    logger.error(e.getMessage(), e);
-                                }
-                            }
-                            try {
-                                conn.close();
-                            } catch (Throwable e) {
-                                if (!scheduleThreadToStop.get()) {
-                                    logger.error(e.getMessage(), e);
-                                }
-                            }
-                        }
-
-                        // close PreparedStatement
-                        if (null != preparedStatement) {
-                            try {
-                                preparedStatement.close();
-                            } catch (Throwable e) {
-                                if (!scheduleThreadToStop.get()) {
-                                    logger.error(e.getMessage(), e);
-                                }
-                            }
-                        }
+                        // transaction commit
+                        XxlJobAdminBootstrap.getInstance().getTransactionManager().commit(transactionStatus);   // avlid schedule repeat
                     }
-                    long cost = System.currentTimeMillis() - start;
+                    // transaction end
+                    long cost = System.currentTimeMillis()-start;
 
 
                     // Wait seconds, align second
                     if (cost < 1000) {  // scan-overtime, not wait
                         try {
                             // pre-read period: success > scan each second; fail > skip this period;
-                            TimeUnit.MILLISECONDS.sleep((preReadSuc ? 1000 : PRE_READ_MS) - System.currentTimeMillis() % 1000);
+                            TimeUnit.MILLISECONDS.sleep((preReadSuc?1000:PRE_READ_MS) - System.currentTimeMillis()%1000);
                         } catch (Throwable e) {
-                            if (!scheduleThreadToStop.get()) {
+                            if (!scheduleThreadToStop) {
                                 logger.error(e.getMessage(), e);
                             }
                         }
@@ -240,13 +178,13 @@ public class JobScheduleHelper {
             @Override
             public void run() {
 
-                while (!ringThreadToStop.get()) {
+                while (!ringThreadToStop) {
 
                     // align second
                     try {
                         TimeUnit.MILLISECONDS.sleep(1000 - System.currentTimeMillis() % 1000);
                     } catch (Throwable e) {
-                        if (!ringThreadToStop.get()) {
+                        if (!ringThreadToStop) {
                             logger.error(e.getMessage(), e);
                         }
                     }
@@ -254,28 +192,37 @@ public class JobScheduleHelper {
                     try {
                         // second data
                         List<Integer> ringItemData = new ArrayList<>();
-                        int nowSecond = LocalDateTime.now().getSecond();   // 避免处理耗时太长，跨过刻度，向前校验一个刻度；
-                        for (int i = 0; i < 2; i++) {
-                            BlockingQueue<Integer> tmpData = ringData.remove((nowSecond + 60 - i) % 60);
-                            if (tmpData != null) {
-                                ringItemData.addAll(tmpData);
+
+                        // collect rind data, by second
+                        int nowSecond = Calendar.getInstance().get(Calendar.SECOND);
+                        for (int i = 0; i <= 2; i++) {                                                              // 避免调度遗漏：处理耗时太长、跨过刻度，除当前刻度外 + 向前校验2个刻度；
+                            List<Integer> ringItemList = ringData.remove( (nowSecond+60-i)%60 );
+                            if (CollectionTool.isNotEmpty(ringItemList)) {
+                                // distinct for each second
+                                List<Integer> ringItemListDistinct = ringItemList.stream().distinct().toList();     // 避免调度重复：重复推送时间轮刻度，去重只保留一个；；
+                                if (ringItemListDistinct.size() < ringItemList.size()) {
+                                    logger.warn(">>>>>>>>>>> xxl-job, time-ring found job repeat beat : " + nowSecond + " = " + ringItemData);
+                                }
+
+                                // collect ring item
+                                ringItemData.addAll(ringItemListDistinct);
                             }
                         }
 
                         // ring trigger
-                        logger.debug(">>>>>>>>>>> xxl-job, time-ring beat : " + nowSecond + " = " + Arrays.asList(ringItemData));
-                        if (!ringItemData.isEmpty()) {
+                        logger.debug(">>>>>>>>>>> xxl-job, time-ring beat : " + nowSecond + " = " + ringItemData);
+                        if (CollectionTool.isNotEmpty(ringItemData)) {
                             // do trigger
-                            for (int jobId : ringItemData) {
+                            for (int jobId: ringItemData) {
                                 // do trigger
-                                JobTriggerPoolHelper.trigger(jobId, TriggerTypeEnum.CRON, -1, null, null, null);
+                                XxlJobAdminBootstrap.getInstance().getJobTriggerPoolHelper().trigger(jobId, TriggerTypeEnum.CRON, -1, null, null, null);
                             }
                             // clear
                             ringItemData.clear();
                         }
                     } catch (Throwable e) {
-                        if (!ringThreadToStop.get()) {
-                            logger.error(">>>>>>>>>>> xxl-job, JobScheduleHelper#ringThread error:{}", e);
+                        if (!ringThreadToStop) {
+                            logger.error(">>>>>>>>>>> xxl-job, JobScheduleHelper#ringThread error:{}", e.getMessage(), e);
                         }
                     }
                 }
@@ -287,24 +234,35 @@ public class JobScheduleHelper {
         ringThread.start();
     }
 
-    private void refreshNextValidTime(XxlJobInfo jobInfo, Date fromTime) throws Exception {
+    /**
+     * refresh next trigger time of job
+     *
+     * @param jobInfo   job info
+     * @param fromTime  from time
+     */
+    private void refreshNextTriggerTime(XxlJobInfo jobInfo, Date fromTime) {
         try {
-            Date nextValidTime = generateNextValidTime(jobInfo, fromTime);
-            if (nextValidTime != null) {
+            // generate next trigger time
+            ScheduleTypeEnum scheduleTypeEnum = ScheduleTypeEnum.match(jobInfo.getScheduleType(), ScheduleTypeEnum.NONE);
+            Date nextTriggerTime = scheduleTypeEnum.getScheduleType().generateNextTriggerTime(jobInfo, fromTime);
+
+            // refresh next trigger-time + status
+            if (nextTriggerTime != null) {
+                // generate success
                 jobInfo.setTriggerStatus(-1);                               // pass, may be Inaccurate
                 jobInfo.setTriggerLastTime(jobInfo.getTriggerNextTime());
-                jobInfo.setTriggerNextTime(nextValidTime.getTime());
+                jobInfo.setTriggerNextTime(nextTriggerTime.getTime());
             } else {
-                // generateNextValidTime fail, stop job
-                jobInfo.setTriggerStatus(0);
+                // generate fail, stop job
+                jobInfo.setTriggerStatus(TriggerStatus.STOPPED.getValue());
                 jobInfo.setTriggerLastTime(0);
                 jobInfo.setTriggerNextTime(0);
                 logger.error(">>>>>>>>>>> xxl-job, refreshNextValidTime fail for job: jobId={}, scheduleType={}, scheduleConf={}",
                         jobInfo.getId(), jobInfo.getScheduleType(), jobInfo.getScheduleConf());
             }
         } catch (Throwable e) {
-            // generateNextValidTime error, stop job
-            jobInfo.setTriggerStatus(0);
+            // generate error, stop job
+            jobInfo.setTriggerStatus(TriggerStatus.STOPPED.getValue());
             jobInfo.setTriggerLastTime(0);
             jobInfo.setTriggerNextTime(0);
 
@@ -313,30 +271,36 @@ public class JobScheduleHelper {
         }
     }
 
-    private void pushTimeRing(int ringSecond, int jobId) {
-        // push async ring
-        BlockingQueue<Integer> ringItemData = ringData.get(ringSecond);
-        if (ringItemData == null) {
-            synchronized (this) {
-                ringItemData = new LinkedBlockingDeque<>();
-                ringData.put(ringSecond, ringItemData);
-            }
-        }
-        ringItemData.add(jobId);
+    /**
+     * push time ring
+     *
+     * @param ringSecond    ring second
+     * @param jobId         job id
+     */
+    private void pushTimeRing(int ringSecond, int jobId){
+        // get ringItemData, init when not exists
+        List<Integer> ringItemList = ringData.computeIfAbsent(
+                ringSecond,
+                k -> new ArrayList<>());
 
-        logger.debug(">>>>>>>>>>> xxl-job, schedule push time-ring : " + ringSecond + " = " + Arrays.asList(ringItemData));
+        // push async rind
+        ringItemList.add(jobId);
+        logger.debug(">>>>>>>>>>> xxl-job, schedule push time-ring : " + ringSecond + " = " + List.of(ringItemList));
     }
 
-    public void toStop() {
+    /**
+     * stop
+     */
+    public void stop(){
 
         // 1、stop schedule
-        scheduleThreadToStop.set(true);
+        scheduleThreadToStop = true;
         try {
             TimeUnit.SECONDS.sleep(1);  // wait
         } catch (Throwable e) {
             logger.error(e.getMessage(), e);
         }
-        if (scheduleThread.getState() != Thread.State.TERMINATED) {
+        if (scheduleThread.getState() != Thread.State.TERMINATED){
             // interrupt and wait
             scheduleThread.interrupt();
             try {
@@ -348,10 +312,10 @@ public class JobScheduleHelper {
 
         // if has ring data
         boolean hasRingData = false;
-        if (!ringData.isEmpty()) {
+        if (MapTool.isNotEmpty(ringData)) {
             for (int second : ringData.keySet()) {
-                BlockingQueue<Integer> tmpData = ringData.get(second);
-                if (tmpData != null && !tmpData.isEmpty()) {
+                List<Integer> ringItemList = ringData.get(second);
+                if (CollectionTool.isNotEmpty(ringItemList)) {
                     hasRingData = true;
                     break;
                 }
@@ -366,13 +330,13 @@ public class JobScheduleHelper {
         }
 
         // stop ring (wait job-in-memory stop)
-        ringThreadToStop.set(true);
+        ringThreadToStop = true;
         try {
             TimeUnit.SECONDS.sleep(1);
         } catch (Throwable e) {
             logger.error(e.getMessage(), e);
         }
-        if (ringThread.getState() != Thread.State.TERMINATED) {
+        if (ringThread.getState() != Thread.State.TERMINATED){
             // interrupt and wait
             ringThread.interrupt();
             try {
@@ -383,19 +347,6 @@ public class JobScheduleHelper {
         }
 
         logger.info(">>>>>>>>>>> xxl-job, JobScheduleHelper stop");
-    }
-
-
-    // ---------------------- tools ----------------------
-    public static Date generateNextValidTime(XxlJobInfo jobInfo, Date fromTime) throws Exception {
-        ScheduleTypeEnum scheduleTypeEnum = ScheduleTypeEnum.match(jobInfo.getScheduleType(), null);
-        if (ScheduleTypeEnum.CRON == scheduleTypeEnum) {
-            Date nextValidTime = new CronExpression(jobInfo.getScheduleConf()).getNextValidTimeAfter(fromTime);
-            return nextValidTime;
-        } else if (ScheduleTypeEnum.FIX_RATE == scheduleTypeEnum /*|| ScheduleTypeEnum.FIX_DELAY == scheduleTypeEnum*/) {
-            return new Date(fromTime.getTime() + Long.parseLong(jobInfo.getScheduleConf()) * 1000L);
-        }
-        return null;
     }
 
 }
