@@ -1,16 +1,15 @@
 package com.xxl.job.admin.util;
 
-import com.xxl.sso.core.helper.XxlSsoHelper;
 import com.xxl.job.admin.constant.Consts;
 import com.xxl.job.admin.model.XxlJobGroup;
-import com.xxl.tool.response.Response;
+import com.xxl.sso.core.helper.XxlSsoHelper;
 import com.xxl.sso.core.model.LoginInfo;
-import javax.servlet.http.HttpServletRequest;
+import com.xxl.tool.core.StringTool;
+import com.xxl.tool.response.Response;
+import jakarta.servlet.http.HttpServletRequest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * jobGroup permission util
@@ -22,12 +21,12 @@ public class JobGroupPermissionUtil {
     /**
      * check if has jobgroup permission
      */
-    public static boolean hasJobGroupPermission(LoginInfo loginInfo, int jobGroup) {
+    public static boolean hasJobGroupPermission(LoginInfo loginInfo, int jobGroup){
         if (XxlSsoHelper.hasRole(loginInfo, Consts.ADMIN_ROLE).isSuccess()) {
             return true;
         } else {
-            List<String> jobGroups = (loginInfo.getExtraInfo() != null && loginInfo.getExtraInfo().containsKey("jobGroups"))
-                    ? new ArrayList<>(Arrays.asList(loginInfo.getExtraInfo().get("jobGroups").split(",")).stream().map(e->e.trim()).filter(e->!e.isEmpty()).collect(Collectors.toList())) : new ArrayList<>();
+            List<String> jobGroups = (loginInfo.getExtraInfo()!=null && loginInfo.getExtraInfo().containsKey("jobGroups"))
+                    ? StringTool.split(loginInfo.getExtraInfo().get("jobGroups"), ",") :new ArrayList<>();
             return jobGroups.contains(String.valueOf(jobGroup));
         }
     }
@@ -38,7 +37,7 @@ public class JobGroupPermissionUtil {
     public static LoginInfo validJobGroupPermission(HttpServletRequest request, int jobGroup) {
         Response<LoginInfo> loginInfoResponse = XxlSsoHelper.loginCheckWithAttr(request);
         if (!(loginInfoResponse.isSuccess() && hasJobGroupPermission(loginInfoResponse.getData(), jobGroup))) {
-            throw new RuntimeException(I18nUtil.getString("system_permission_limit") + "[username=" + loginInfoResponse.getData().getUserName() + "]");
+            throw new RuntimeException(I18nUtil.getString("system_permission_limit") + "[username="+ loginInfoResponse.getData().getUserName() +"]");
         }
         return loginInfoResponse.getData();
     }
@@ -46,19 +45,22 @@ public class JobGroupPermissionUtil {
     /**
      * filter jobGroupList by permission
      */
-    public static List<XxlJobGroup> filterJobGroupByPermission(HttpServletRequest request, List<XxlJobGroup> jobGroupListTotal) {
-        Response<LoginInfo> loginInfoResponse = XxlSsoHelper.loginCheckWithAttr(request);
+    public static List<XxlJobGroup> filterJobGroupByPermission(HttpServletRequest request, List<XxlJobGroup> jobGroupListTotal){
+        Response<LoginInfo>  loginInfoResponse = XxlSsoHelper.loginCheckWithAttr(request);
 
         if (XxlSsoHelper.hasRole(loginInfoResponse.getData(), Consts.ADMIN_ROLE).isSuccess()) {
             return jobGroupListTotal;
         } else {
-            List<String> jobGroups = (loginInfoResponse.getData().getExtraInfo() != null && loginInfoResponse.getData().getExtraInfo().containsKey("jobGroups"))
-                    ? new ArrayList<>(Arrays.asList(loginInfoResponse.getData().getExtraInfo().get("jobGroups").split(",")).stream().map(e->e.trim()).filter(e->!e.isEmpty()).collect(Collectors.toList())) : new ArrayList<>();
+            List<String> jobGroups = (loginInfoResponse.getData().getExtraInfo()!=null
+                    && loginInfoResponse.getData().getExtraInfo().get("jobGroups")!=null
+            )
+                    ? StringTool.split(loginInfoResponse.getData().getExtraInfo().get("jobGroups"), ",")
+                    :new ArrayList<>();
 
             return jobGroupListTotal
                     .stream()
                     .filter(jobGroup -> jobGroups.contains(String.valueOf(jobGroup.getId())))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
