@@ -5,15 +5,17 @@ import com.xxl.job.admin.mapper.XxlJobUserMapper;
 import com.xxl.job.admin.model.XxlJobUser;
 import com.xxl.sso.core.model.LoginInfo;
 import com.xxl.sso.core.store.LoginStore;
+import com.xxl.tool.core.MapTool;
 import com.xxl.tool.response.Response;
-import javax.annotation.Resource;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Component;
 
-import java.util.*;
+import java.util.List;
+import java.util.Map;
 
 /**
  * Simple LoginStore
- * <p>
+ *
  * 1、store by database；
  * 2、If you have higher performance requirements, it is recommended to use RedisLoginStore；
  *
@@ -63,11 +65,12 @@ public class SimpleLoginStore implements LoginStore {
         }
 
         // parse role
-        List<String> roleList = user.getRole() == 1 ? new ArrayList<>(Arrays.asList(Consts.ADMIN_ROLE)) : null;
+        List<String> roleList = user.getRole()==1? List.of(Consts.ADMIN_ROLE):null;
 
         // parse jobGroup permission
-        Map<String, String> extraInfo = new HashMap<>();
-        extraInfo.put("jobGroups", user.getPermission());
+        Map<String, String> extraInfo = MapTool.newMap(
+                "jobGroups", user.getPermission()
+        );
 
         // build LoginInfo
         LoginInfo loginInfo = new LoginInfo(userId, user.getToken());
